11-external-authz/istio-setup/envoyfilter-ext-authz.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz
spec:
  workloadSelector:
   labels:
     app: istio-demo-wrapper
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:              
        name: envoy.filters.http.ext_authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          http_service:
             server_uri:
               uri: ext-authz-http.default.svc.cluster.local/v1/authn-authz/validatebasicauth 
               cluster: ext-authz
               timeout: 5s           
  - applyTo: CLUSTER
    match:
        context: SIDECAR_INBOUND
        cluster:
          service: ext-authz-http.default.svc.cluster.local
    patch:
        operation: ADD
        value:
          name: ext-authz
          type: STRICT_DNS
          connect_timeout: 10s
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          dns_refresh_rate: 500ms
          load_assignment:
            cluster_name: ext-authz
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ext-authz-http.default.svc.cluster.local
                      port_value: 80
